# todo

./: .gitignore  README.md  compose.dev.yaml
.github/workflows/: build-images.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: notifications.py  tasks.py
backend/app/services/: notify.py  recurrence.py
backend/tests/: conftest.py  test_recurrence.py  test_reminders.py  test_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  api.ts  dates.ts  styles.css
frontend/src/components/: TaskBits.tsx
frontend/src/pages/: HistoryPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TaskFormPage.tsx  TasksPage.tsx
